# GPU-Accelerated-Acoustic-Simulator

./: .clang-format  .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  acoustic_simulator.py  docker-compose.yml  dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.github/workflows/: .docker-ci.yml
include/: convolution.h  cuda_math.h  mesh_loader.h  simulation.h  wav_io.h
python/: acoustic_simulator.py  generate_beat.py  process_audio.py  pyproject.toml  visualize.py
src/: convolution.cuh  convolution_gpu.cu  cuda_math.h  main.cpp  mesh_loader.h  simulation.h  simulation_cpu.cpp  simulation_gpu.cu
src/cpu/: convolution_cpu.cpp  simulation_cpu.cpp
src/gpu/: convolution.cuh  convolution_gpu.cu  simulation.cuh  simulation_gpu.cu
